# python-template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: continuous-integration.yaml  publish-documentation.yaml
docs/: conf.py  index.rst
src/helloworld/: __init__.py  helloworld.py  test_helloworld.py
